# context-chatbot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
app/: graph.py  ingest.py  main.py  snapshot.py
app/static/: index.html
docs/: langgraph_overview.md  project_architecture.md  wikipedia_langchain.md  wikipedia_retrieval_augmented_generation.md
evals/: dataset.py  run_eval.py
tests/: conftest.py  fakes.py  test_api.py  test_eval_retrieval.py  test_graph.py  test_ingest.py  test_retrieval.py
